[package]
name = "mio-uds"
version = "0.6.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/mio-uds"
homepage = "https://github.com/alexcrichton/mio-uds"
documentation = "http://alexcrichton.com/mio-uds"
description = """
Unix domain socket bindings for mio
"""

[target."cfg(unix)".dependencies]
libc = "0.2"
mio = "0.6"

[dev-dependencies]
tempdir = "0.3"
