[package]
name = "mio-uds"
version = "0.7.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/mio-uds"
homepage = "https://github.com/alexcrichton/mio-uds"
documentation = "https://docs.rs/mio-uds"
description = """
Deprecated Unix domain socket bindings for mio (now just reexports mio::net)
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "alexcrichton/mio-uds" }

[target."cfg(unix)".dependencies]
mio = { version = "0.7", features = ["uds"] }
