[package]
name = "mio-uds"
version = "0.6.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/deprecrated/mio-uds"
homepage = "https://github.com/deprecrated/mio-uds"
documentation = "https://docs.rs/mio-uds"
description = """
Unix domain socket bindings for mio
"""
categories = ["asynchronous"]
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/**/*.rs"
]

[target."cfg(unix)".dependencies]
iovec = "0.1"
libc = "0.2.42"
mio = "0.6.5"

[dev-dependencies]
tempdir = "0.3"
